src/test/deca/context/valid/with_object/DOUBT_override.deca
class A{
    int a;
}

class B extends A(){
    int a = 1;
}