src/test/deca/context/invalid/with-object/assign_compatible_mother.deca
class Animal{
    int x, y;
}

class Cow extends Animal{
    int weight;
}

{
    Cow a =  new Animal();
}